canary-stable.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: progressive-delivery
  namespace: progressive
spec:
  replicas: 2 
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: progressive-delivery
  template:
    metadata:
      # ADDED THESE ANNOTATIONS TO ENABLE METRICS SCRAPING
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/stats/prometheus"
        prometheus.io/port: "15020"
      labels:
        app: progressive-delivery
    spec:
      containers:
        - name: web
          image: sandeshs/progressive-delivery:v1
          ports:
            - containerPort: 8000
              name: http-web 
          resources: 
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
  strategy:
    canary:
      canaryService: progressive-delivery-canary
      stableService: progressive-delivery-stable
      trafficRouting:
        istio:
          virtualService:
            name: progressive-delivery-vs
            routes:
              - primary
          destinationRule:
            name: progressive-delivery-dr
            stableSubsetName: stable
            canarySubsetName: canary
      steps:
        - setWeight: 10
        - pause: {duration: 30s} 
        - analysis:
            templates:
              - templateName: pd-slo-checks
        - setWeight: 50
        - pause: {duration: 30s}
        - setWeight: 100
