car-service.yml
# Code Generated by Sidekick is for learning and experimentation purposes only.
apiVersion: v1
kind: Service
metadata:
  name: progressive-delivery-stable
  namespace: progressive
spec:
  selector:
    app: progressive-delivery
  ports:
    - name: http
      port: 80
      targetPort: 8000
---
# Code Generated by Sidekick is for learning and experimentation purposes only.
apiVersion: v1
kind: Service
metadata:
  name: progressive-delivery-canary
  namespace: progressive
spec:
  selector:
    app: progressive-delivery
  ports:
    - name: http
      port: 80
      targetPort: 8000
