destin.yml
# Code Generated by Sidekick is for learning and experimentation purposes only.
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: progressive-delivery-dr
  namespace: progressive
spec:
  host: progressive-delivery.progressive.svc.cluster.local
  subsets:
    - name: stable
      labels:
        rollouts-pod-template-hash: stable
    - name: canary
      labels:
        rollouts-pod-template-hash: canary
