virtual-server.yml
# Code Generated by Sidekick is for learning and experimentation purposes only.
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: progressive-delivery-vs
  namespace: progressive
spec:
  hosts:
    - "*"
  gateways: 
    - default/my-gateway
  http:
    - route:
        - destination:
            host: progressive-delivery.progressive.svc.cluster.local
            subset: v1
            port:
              number: 80 # This matches the 'port' in your Service
          weight: 90
        - destination:
            host: progressive-delivery.progressive.svc.cluster.local
            subset: v2
            port:
              number: 80 # This matches the 'port' in your Service
          weight: 10
